# Layer

./: DESCRIPTION  NAMESPACE  configure  configure.ac  configure.win
R/: Layer-package.R  Layer.R
man/: Layer-package.Rd  Layer.Rd  add.layer.Rd  get.current.layer.Rd  get.layers.Rd  set.current.layer.Rd
src/: EventLoop.c  Layer.cpp  Layer.h  LayerDesc.cpp  LayerDesc.h  LayerDevice.cpp  LayerDevice.h  LayerStruct.cpp  LayerStruct.h
